force-app/main/default/objects/AcctPlanPaymentImport__c/AcctPlanPaymentImport__c.object-meta.xml
<CustomObject>
    <label>Account Plan Payment Import</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Account Plan Payment Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Payment Import</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>