force-app/main/default/objects/AcctPlanPaymentImport__c/fields/AcctPlanPaymentMethodImport__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanPaymentMethodImport__c</fullName>
    <description>Account Plan Payment Method Import</description>
    <label>Account Plan Payment Method Import</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>Account Plan Payment Import</relationshipLabel>
    <relationshipName>Account_Plan_Payment_Import</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>