force-app/main/default/objects/AcctPlanPaymentImport__c/fields/NoOfTransaction__c.field-meta.xml
<CustomField>
    <fullName>NoOfTransaction__c</fullName>
    <description>No. of Transaction Average per month</description>
    <inlineHelpText>No. of Transaction Average per month</inlineHelpText>
    <label>No. of Transaction Average per month</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>