force-app/main/default/objects/AcctPlanPaymentImport__c/fields/SharedBank1__c.field-meta.xml
<CustomField>
    <fullName>SharedBank1__c</fullName>
    <description>สัดส่วนการทำธุรกรรมแต่ละประเภทผ่านธนาคารอื่นๆ โดยเลือกอีก 4 ธนาคารหลัก</description>
    <inlineHelpText>สัดส่วนการทำธุรกรรมแต่ละประเภทผ่านธนาคารอื่นๆ โดยเลือกอีก 4 ธนาคารหลัก</inlineHelpText>
    <label>%share-[Bank1]</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>