force-app/main/default/objects/AcctPlanPaymentImport__c/fields/StandardFee__c.field-meta.xml
<CustomField>
    <fullName>StandardFee__c</fullName>
    <description>ค่าธรรมเนียมมาตรฐาน (Reference)</description>
    <inlineHelpText>ค่าธรรมเนียมมาตรฐาน (Reference)</inlineHelpText>
    <label>Standard Fee (Reference)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>