force-app/main/default/objects/AcctPlanPaymentImport__c/fields/Type_of_Fee__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Fee__c</fullName>
    <description>Type of Fee</description>
    <inlineHelpText>Type of Fee</inlineHelpText>
    <label>Type of Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LC Commission</fullName>
            </value>
            <value>
                <fullName>Engagement Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>