force-app/main/default/objects/AcctPlanPaymentImport__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <description>Import (Vol.) Average per Month</description>
    <inlineHelpText>Import (Vol.) Average per Month</inlineHelpText>
    <label>Import (Vol.) Average per Month</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>