force-app/main/default/objects/AcctPlanPaymentImport__c/fields/WalletTFFee__c.field-meta.xml
<CustomField>
    <fullName>WalletTFFee__c</fullName>
    <description>Wallet ของ Trade Fee ในส่วนที่เกี่ยวข้องกับธุรกรรมการจ่ายเงินจากในประเทศ</description>
    <formula>if(  ISPICKVAL( Type_of_Fee__c ,&apos;Engagement Fee&apos;)  ,
Volume__c 
*(Term__c/365)
* 12 
* if( ISNULL( FeeCharge__c) , 1 ,FeeCharge__c/100),

(Volume__c  
* if( ISNULL( FeeCharge__c) , 1 ,  FeeCharge__c/100 )
* 12)



)</formula>
    <inlineHelpText>Wallet ของ Trade Fee ในส่วนที่เกี่ยวข้องกับธุรกรรมการจ่ายเงินจากในประเทศ</inlineHelpText>
    <label>WalletTFFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>